--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+    <head>
+        <title>deltagolf</title>
+    </head>
+    <body>
 
 <h1>deltagolf</h1>
 <p>welcome</p>
+<p>under construction!</p>
 
 </body>
 </html>
-
