--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     </head>
     <body>
 
-<h1>deltagolf</h1>
-<p>welcome</p>
-<p>under construction!</p>
+<h1> style="text-align:center"> deltagolf</h1>
+<p> style="text-align:center"> welcome</p>
+<p> style="text-align:center"> under construction!</p>
 
 </body>
 </html>
