--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
     <head>
         <title>deltagolf</title>
+        <style>
+            p,h1 {
+             text-align:center
+            }
+            </style>
     </head>
     <body>
 
-<h1> style="text-align:center"> deltagolf</h1>
-<p> style="text-align:center"> welcome</p>
-<p> style="text-align:center"> under construction!</p>
+<h1>deltagolf</h1>
+<p>welcome</p>
+<p>under construction!</p>
 
 </body>
 </html>
+
